--- a/Backend/static/admin_funct_styles.css
+++ b/Backend/static/admin_funct_styles.css
@@ -1,3 +1,6 @@
+* {
+    text-align: center;
+}
 #text {
     text-align: center;
 }
@@ -5,6 +8,10 @@
 form {
     text-align: center;
 }
+#inline {
+    display: inline-block;
+}
+
 
 #pop_up {
     font-weight: bold;
