--- a/Backend/templates/prov_funct.html
+++ b/Backend/templates/prov_funct.html
@@ -9,7 +9,37 @@
 </head>
 
 <body>
+    <h1>Provider Dashboard</h1>
+    Welcome Provider {{username}}
+    <p>Id:{{userid}}</p>
+    <div id="inline">
+        <form action="/prov_funct" method='POST'>
 
+            <input type="hidden" name="todo" value=1>
+            <button>Profile</button>
+        </form>
+        <form action="/prov_funct" method='POST'>
+
+            <input type="hidden" name="todo" value=2>
+            <button>View Requests</button>
+        </form>
+
+        <form action="/prov_funct" method='POST'>
+
+            <input type="hidden" name="todo" value=3>
+            <button>Orders in Progress</button>
+        </form>
+
+        <form action="/prov_funct" method='POST'>
+
+            <input type="hidden" name="todo" value=4>
+            <button>View completed Orders</button>
+        </form>
+        <form action="/login" method='POST'>
+            <button>Logout</button>
+        </form>
+
+    </div>
     {% if funct==1 %}
     <div id="profile">
 
@@ -62,13 +92,13 @@
         <div id="pop_up">
             Are you sure you want to delete your account?<br>
             <form action="/prov_funct" method='POST' id="but_popup">
-                
+
                 <input type="hidden" name="todo" value=7>
                 <button>Yes</button>
             </form>
 
             <form action="/prov_funct" method='POST' id="but_popup">
-                
+
                 <input type="hidden" name="todo" value=1>
                 <!-- todo=1 ie go back to profile viewing -->
                 <button>No</button>
@@ -79,7 +109,7 @@
 
         <div id="inline">
             <form action="/prov_funct" method='POST'>
-                
+
                 <input type="hidden" name="todo" value=5>
                 <button>Delete Account</button>
             </form>
@@ -134,7 +164,7 @@
         <p>Select the request to create a quote and Enter Quote Details</p>
 
         <form action="/prov_funct" method='post'>
-            
+
             <input type="hidden" name="todo" value=8>
 
             <label>Enter the Request ID to be accepted:</label>
@@ -211,7 +241,7 @@
         </table>
         <p>Update Order Status</p>
         <form action="/prov_funct" method='POST'>
-            
+
             <input type="hidden" name="todo" value=9>
             <label for="ordid">Enter OrderID:</label>
             <input type="text" name="ordid" id="ordid">
@@ -264,7 +294,7 @@
                     <td>{{row[4]}}</td>
                     <td>{{row[5]}}</td>
                     <td>{{row[6]}}</td>
-                    
+
                     <td>{{row[8]}}</td>
                     <td>{{row[9]}}</td>
                     <td>{{row[10]}}</td>
