--- a/Backend/static/user_deleted_styles.css
+++ b/Backend/static/user_deleted_styles.css
@@ -1,3 +1,31 @@
-* {
-    text-align: center;
+@import url('./config.css');
+
+body, html {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--dark-secondary);
+    font-size: large;
+    font-weight: bolder;
+    color: var(--light-primary);
 }
+
+button {
+    background: none;
+    border: none;
+    color: var(--light-primary);
+    font-size: large;
+    padding: 0;
+    cursor: pointer;
+    appearance: none;
+    margin: 5px;
+    text-decoration: underline;
+    font-style: italic;
+
+}
+
+
